Fixed links to the wiki pages (#863)

--- a/docs/_posts/2000-01-04-download.md
+++ b/docs/_posts/2000-01-04-download.md
@@ -9,7 +9,7 @@ style: center
 # Latest Release
 
 For development without Maven, or for [running demos from the command
-line](https://github.com/jgrapht/jgrapht/wiki/Running-JGraphT-demos), you can download a full archive of the release:
+line](https://github.com/jgrapht/jgrapht/wiki/Users:-Running-JGraphT-demos), you can download a full archive of the release:
 
 <div style="position: relative; display: table; margin: 30px auto; font-size:20px; width: 600px;">
   <div style="width: 300px; float:left;" class="center">
