--- a/docs/_posts/2000-01-06-news.md
+++ b/docs/_posts/2000-01-06-news.md
@@ -6,6 +6,10 @@ fa-icon: exclamation
 style: center
 ---
 
+## **14-Jun-2020:**  Release 1.5.0 is now available!
+
+Read the [release announcement](https://sourceforge.net/p/jgrapht/news/2020/06/jgrapht-version-150-released/) for more info.
+
 ## **21-Feb-2020:**  Release 1.4.0 is now available!
 
 Read the [release announcement](https://sourceforge.net/p/jgrapht/news/2020/02/jgrapht-version-140-released/) for more info.
