Doc updates for python and paper

--- a/docs/_posts/2000-01-01-intro.md
+++ b/docs/_posts/2000-01-01-intro.md
@@ -10,6 +10,9 @@ style: center
 ### a Java library of graph theory data structures and algorithms
 {: .text-blue}
 
+#### now with [Python bindings](https://pypi.org/project/jgrapht) too!
+{: .text-blue}
+
 <br>
 
 ### *flexible*
