--- a/docs/_posts/2000-01-06-news.md
+++ b/docs/_posts/2000-01-06-news.md
@@ -13,7 +13,7 @@ style: center
 ### Read the [release announcement](https://sourceforge.net/p/jgrapht/news/2020/06/jgrapht-version-150-released/) for more info.
 
 ## **21-May-2020:**  JGraphT Research Paper Published!
-### [Our paper](https://dl.acm.org/doi/10.1145/3381449), published in the ACM Transactions on Mathematical Systems, provides an in-depth look at the design of JGraphT, and also includes performance comparisons against other libraries.
+### [Our paper](https://dl.acm.org/doi/10.1145/3381449), published in the ACM Transactions on Mathematical Software, provides an in-depth look at the design of JGraphT, and also includes performance comparisons against other libraries.
 
 ## **21-Feb-2020:**  Release 1.4.0 is now available!
 ### Read the [release announcement](https://sourceforge.net/p/jgrapht/news/2020/02/jgrapht-version-140-released/) for more info.
